# SimSpark-SPL

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  README.md  RELEASE  THANKS  TODO  acinclude.m4  bootstrap  build.sh  changes.txt  clean.sh  configure.ac  configure.in  pre-make  rel.awk
app/agentspark/: Makefile.am  carbehavior.cpp  hoap2behavior.cpp  leggedspherebehavior.cpp  leggedspherebehavior.h  main.cpp  naobehavior.cpp  soccerbehavior.cpp  soccerbehavior.h  soccerbotbehavior.cpp  soccerbotbehavior.h
app/agenttest/: Makefile.am  ReadBuffFD.cpp  ReadBuffFD.h  agenttest.rb  behavior.cpp  behavior.h  behavior_c.cpp  commserver.cpp  commserver.h  commserver_c.cpp  kicknrun.cpp  kicknrun.h  kicknrun_c.cpp  main.cpp  soccer.cpp  soccer.h  soccer_c.cpp  worldmodel.cpp  worldmodel.h  worldmodel_c.cpp
app/coretest/: Makefile.am  coretest.dsp  coretest.rb  main.cpp  zeitgeist.rb
app/fonttest/: Makefile.am  bmp.tga  fonttest.dsp  jpg.tga  main.cpp  png-gray.tga
app/gendot/: Makefile.am  include.dot  main.cpp
app/inputtest/: Makefile.am  german.scan.rb  inputtest.dsp  inputtest.rb  main.cpp  zeitgeist.rb
app/monitorspark/: Makefile.am  main.cpp  monitorspark.rb  soccerbindings.rb  soccersim-monitor.rb  soccersim.rb
app/rcssmonitor3d/: Makefile.am  camera.cpp  camera.h  commserver.cpp  commserver.h  commserver_c.cpp  communit.cpp  communit.h  glserver.cpp  glserver.h  main.cpp  rcssmonitor3D.rb  rcssmonitor3d.rb  tcpsocket.cpp  tcpsocket.h  types.h
app/rsgedit/: Makefile.am  aboutDlg.cpp  agentframe.cpp  agentframe.h  constants.cpp  constants.h  inputwx.cpp  kinematicframe.cpp  kinematicframe.h  main.cpp  mainframe.cpp  mainframe.h  materials-default.rb  platform.cpp  platform.h  property.cpp  propertyframe.cpp  propertylist.cpp  rsgedit.rb  simspark.cpp  simspark.h  sparkcontext.cpp  sparkcontextevent.cpp  sparkedit.cpp  sparkglcanvas.cpp  sparkglcanvas.h  sparkglrender.cpp  sparktree.cpp  sparktree.h
app/scenetest/: Makefile.am  SDL_main.c  main.cpp  md5mesh.cpp  md5mesh.h  md5mesh_c.cpp  scenetest.dsp
app/simspark/: Makefile.am  bindings.rb  internalsoccerbindings.rb  internalsoccermonitor.rb  main.cpp  materials-default.rb  materials-textures.rb.in  materials.rb  naosoccersim.rb  simspark.rb  soccersim.rb
app/simulator/: Makefile.am  agentdb.list  createagentdb.sh.in  main.cpp  preinit.rb  rcsoccersim3D.in  rcssserver3D.rb  simulator.dsp  simulator.rb
app/spadestest/: Makefile.am  agentdb.list  main.cpp  spadestest.rb
app/zeitgeisttest/: Makefile.am  main.cpp  zeitgeisttest.dsp
doc/: Doxyfile.in  Makefile.am  TEXT_INSTEAD_OF_A_MANUAL.txt  codingstyle.txt  hellolatex.jpg.aux  howto_effector.html  howtos.txt  implementation.html  index.html  manual.aux  manual.dvi  manual.idx  manual.ilg  manual.ind  manual.tex  manual.tex.backup  manual.tex.bak  manual.toc  menu.html  project_settings.txt  scripting interface.txt  used_libraries.txt  welcome.html
doc/chapter2/: chapter2.tex  chapter2.tex.bak
doc/chapter3/: chapter3.tex
doc/chapter4/: chapter4.tex  chapter4.tex.bak
doc/chapter5/: chapter5.tex
doc/chapter6/: chapter6.tex
doc/devel/: Makefile.am  conventions.tex  definitions.tex  manual.tex  zeitgeist.tex
doc/manual/: Makefile.am  manual.bib  manual.tex  monitor.tex  overview.tex  scenelang.tex  soccer.tex
doc/proposal/: Makefile.am  simulator3d.tex
doc/styles/: todo.sty
doc/users/: Makefile.am  agentspark.tex  definitions.tex  gettingstarted.tex  introduction.tex  license.tex  monitorspark.tex  overview.tex  references.bib  resources.tex  robots.tex  simspark.tex  simulations.tex  user-manual.tex
lib/kerosin/: Makefile.am  kerosin-config.in  kerosin.cpp  kerosin.dsp  kerosin.h  kerosin.rb  kerosin.rb.in
lib/oxygen/: Makefile.am  oxygen-config.in  oxygen.cpp  oxygen.h
lib/salt/: Makefile.am  bounds.cpp  bounds.h  defines.h  fileclasses.cpp  fileclasses.h  frustum.cpp  frustum.h  gmath.h  matrix.cpp  matrix.h  path.cpp  path.h  plane.cpp  plane.h  ptr.h  ptrmanager.h  quadlink.h  random.h  rect.h  salt-config.in  salt.dsp  salt.h  sharedlibrary.h  tvector.h  vector.h
plugin/: Makefile.am  plugin.dsw
plugin/collisionperceptor/: Makefile  Makefile.am  collisionperceptor.cpp  collisionperceptor.h  collisionperceptor_c.cpp  export.cpp  extendedtouchperceptor.cpp  extendedtouchperceptor.h  extendedtouchperceptor_c.cpp  forceresistanceperceptor.cpp  forceresistanceperceptor.h  forceresistanceperceptor_c.cpp  perceptorhandler.cpp  perceptorhandler.h  perceptorhandler_c.cpp  touchperceptor.cpp  touchperceptorhandler.cpp  touchperceptorhandler.h  touchperceptorhandler_c.cpp
plugin/filesystemrar/: Makefile.am  export.cpp  filesystemrar.cpp  filesystemrar.dsp  filesystemrar.h  filesystemrar_c.cpp
plugin/filesystemstd/: Makefile.am  export.cpp  filesystemstd.cpp  filesystemstd.dsp  filesystemstd.h  filesystemstd_c.cpp
plugin/filesystemzip/: Makefile.am  export.cpp  filesystemzip.cpp  filesystemzip.dsp  filesystemzip.h  filesystemzip_c.cpp
plugin/forceeffector/: export.cpp  forceaction.h  forceeffector.cpp  forceeffector.h  forceeffector_c.cpp
plugin/gyrorateperceptor/: Makefile.in  export.cpp  gyrorateperceptor.cpp  gyrorateperceptor.h
plugin/inputsdl/: Makefile.am  export.cpp  inputdevicesdl.h  inputdevicesdl_c.cpp  inputsdl.dsp  inputsystemsdl.cpp  inputsystemsdl.h  inputsystemsdl_c.cpp  keyboardsdl.cpp  keyboardsdl.h  keyboardsdl_c.cpp  mousesdl.cpp  mousesdl.h  mousesdl_c.cpp  timersdl.cpp  timersdl.h  timersdl_c.cpp
plugin/inputwx/: Makefile.am  export.cpp  inputsystemwx.cpp  (+4 more)
rcssserver3d/: AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  NEWS  README  README-soccer  RELEASE  cmake_uninstall.cmake.in
rsgedit/: .cproject  AUTHORS  CMakeLists.txt  ChangeLog  acinclude.m4  configure.ac  rsgedit_config.h.cmake
simspark-utilities/: CMakeLists.txt  ChangeLog  cmake_uninstall.cmake.in
simulator/: Makefile.am  basenode.cc  basenode.h  dirnode.cc  dirnode.h  entitytree.cc  entitytree.h  example.cc  simulator.cc  simulator.h
spark/: CMakeLists.txt  ChangeLog  NEWS  RELEASE  configure.ac  sparkconfig.h.cmake
(+5520 files in other folders)
