SUBDIRS = \
	  filesystemstd \
	  filesystemzip \
	  forceeffector \
	  gyrorateperceptor \
	  inputsdl \
	  monitortest \
	  objimporter \
	  perfectvisionperceptor \
	  collisionperceptor \
	  sexpparser \
	  soccer \
	  rubysceneimporter\
	  voidmeshimporter\
	  sparkmonitor\
	  sparkagent\
	  sceneeffector\
	  soccermonitor \
	  soundsystemfmod

# filesystemrar 
# soundsystembass
# 
