SUBDIRS = \
	  filesystemstd \
	  filesystemzip \
	  forceeffector \
	  gyrorateperceptor \
	  inputsdl \
	  monitortest \
	  objimporter \
	  openglsyssdl \
	  perfectvisionperceptor \
	  collisionperceptor \
	  sexpparser \
	  soccer \
	  rosimporter \
	  rubysceneimporter\
	  voidmeshimporter\
	  sparkmonitor\
	  sparkagent\
	  sceneeffector\
	  soccermonitor \
	  soundsystemfmod

# filesystemrar 
# soundsystembass
# 
