SUBDIRS = \
	  filesystemstd \
	  filesystemzip \
	  forceeffector \
	  gyrorateperceptor \
	  inputsdl \
	  monitortest \
	  objimporter \
	  openglsyssdl \
	  perfectvisionperceptor \
	  collisionperceptor \
	  sexpparser \
	  soccer \
	  rosimporter \
	  rubysceneimporter\
	  sparkmonitor\
	  sparkagent\
	  sceneeffector\
	  soccermonitor \
	  soundsystemfmod \
	  inputwx \
	  openglsyswx

# filesystemrar 
# soundsystembass
# 
